--- a/index.html
+++ b/index.html
@@ -21,26 +21,9 @@
     <header>
 <nav class="navbar navbar-expand-lg navbar-light">
         <a href="#" class="navbar-brand d-flex align-items-center">
-            <img style="size:contain;width: 170px; left: 15px;" src="assets/img/ommerstenlog.png"></a>
-        </a>  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
+            <img style="size:contain;width: 150px; left: 30px;" src="assets/img/ommerstenlogo.png"></a>
+        </a>  
+
 </nav>
     </header>
 
@@ -53,7 +36,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted"></span>
       </div>
     </footer>
 
